@@ -41,7 +41,6 @@
 /// information associated with each candidate indel intersecting an alignment
 struct starling_align_indel_info
 {
-
     starling_align_indel_info() :
         is_present(false),
         is_remove_only(false)
@@ -56,7 +55,6 @@ static
 std::ostream&
 operator<<(std::ostream& os, const starling_align_indel_info& ii)
 {
-
     os << "is_present: " << ii.is_present << " is_remove_only: " << ii.is_remove_only;
     return os;
 }
@@ -77,7 +75,6 @@ check_for_candidate_indel_overlap(const starling_options& opt,
                                   const read_segment& rseg,
                                   const indel_synchronizer& isync)
 {
-
 #ifdef DEBUG_ALIGN
     std::cerr << "BUGBUG testing read_segment for indel overlap, sample_no: " << isync.get_sample_id() << " rseg: " << rseg;
 #endif
@@ -143,7 +140,6 @@ void
 dump_indel_status(const starling_align_indel_status& ismap,
                   std::ostream& os)
 {
-
     for (const auto& is : ismap)
     {
         os << is.first << "status: " << is.second << "\n";
@@ -163,7 +159,6 @@ is_usable_indel(const indel_synchronizer& isync,
                 const indel_data& id,
                 const align_id_t read_id)
 {
-
     return (isync.is_candidate_indel(opt,ik,id) ||
             (id.all_read_ids.count(read_id)>0) ||
             (id.tier2_map_read_ids.count(read_id)>0) ||
@@ -184,7 +179,6 @@ add_indels_in_range(const starling_options& opt,
                     starling_align_indel_status& indel_status_map,
                     std::vector<indel_key>& indel_order)
 {
-
     const indel_buffer& ibuff(isync.ibuff());
     const std::pair<ciiter,ciiter> ipair(ibuff.pos_range_iter(pr.begin_pos,pr.end_pos));
 #ifdef DEBUG_ALIGN
@@ -264,14 +258,14 @@ make_start_pos_alignment(const pos_t ref_start_pos,
                          const unsigned read_length,
                          const indel_set_t& indels)
 {
-
     using namespace ALIGNPATH;
 
     assert(read_length>0);
     assert(ref_start_pos>=0);
     assert(read_start_pos>=0);
 
-    // if true, this read contains a leading insert,swap,softclip,etc...
+    // if true, this read contains a leading insert,swap,softclip, etc.
+    // (but not a leading deletion)
     const bool is_leading_read(read_start_pos!=0);
 
     candidate_alignment cal;
@@ -285,15 +279,14 @@ make_start_pos_alignment(const pos_t ref_start_pos,
 
     for (const indel_key& ik : indels)
     {
-
         // don't consider indels which can't intersect the read:
         if (ik.right_pos() < ref_start_pos) continue;
         if ((ik.right_pos() == ref_start_pos) && (! is_leading_read)) continue;
 
-        if (apath.empty()) assert(ref_head_pos==ref_start_pos);
-
         // deal with leading indel, swap or right breakpoint:
         const bool is_first_intersecting_indel(apath.empty());
+
+        if (is_first_intersecting_indel) assert(ref_head_pos==ref_start_pos);
 
         if (is_leading_read && is_first_intersecting_indel)
         {
@@ -338,7 +331,7 @@ make_start_pos_alignment(const pos_t ref_start_pos,
         }
 
         // no more leading insertion indels -- deal with regular case:
-        assert((apath.size()!=0) || (read_start_pos==0));
+        assert((! is_first_intersecting_indel) || (read_start_pos==0));
 
         // note this relies on the single extra base of separation
         // required between indels during indel conflict detection:
@@ -351,30 +344,28 @@ make_start_pos_alignment(const pos_t ref_start_pos,
             throw blt_exception(oss.str().c_str());
         }
 
-        /// TODO: several redundant error checks in this region. cleanup.
-        if (ik.pos <= ref_head_pos)
-        {
-            std::ostringstream oss;
-            oss << "ERROR: indel candidate: " << ik << " is not greater than ref_head_pos: " << ref_head_pos
-                << ". Cannot resolve indel with candidate read alignment: " << cal << "\n";
-            throw blt_exception(oss.str().c_str());
-        }
-
+        assert(ik.pos >= ref_head_pos);
         const unsigned match_segment(ik.pos-ref_head_pos);
 
-        assert(match_segment>0);
+        assert(is_first_intersecting_indel || (match_segment>0));
 
         // remaining read segment match segment added after indel loop:
-        if (read_head_pos+match_segment>=read_length) break;
+        if (read_head_pos+match_segment>read_length ||
+            ((read_head_pos+match_segment)==read_length && (ik.type!=INDEL::DELETE)))
+        {
+            break;
+        }
 
-        apath.push_back(path_segment(MATCH,match_segment));
-        ref_head_pos += match_segment;
-        read_head_pos += match_segment;
+        if (match_segment > 0)
+        {
+            apath.push_back(path_segment(MATCH,match_segment));
+            ref_head_pos += match_segment;
+            read_head_pos += match_segment;
+        }
 
         if       (ik.type==INDEL::INSERT ||
                   ik.type==INDEL::SWAP)
         {
-
             if (ik.type==INDEL::SWAP)
             {
                 add_path_segment(apath,DELETE,ref_head_pos,ik.swap_dlength);
@@ -394,6 +385,17 @@ make_start_pos_alignment(const pos_t ref_start_pos,
         else if (ik.type==INDEL::DELETE)
         {
             add_path_segment(apath,DELETE,ref_head_pos,ik.length);
+            if (match_segment==0) {
+                cal.leading_indel_key=ik;
+            }
+            else
+            {
+                const bool is_final(read_head_pos==static_cast<pos_t>(read_length));
+                if (is_final)
+                {
+                    cal.trailing_indel_key=ik;
+                }
+            }
         }
         else if (ik.type==INDEL::BP_LEFT)
         {
@@ -434,7 +436,6 @@ get_end_pin_start_pos(const indel_set_t& indels,
                       pos_t& ref_start_pos,
                       pos_t& read_start_pos)
 {
-
     assert(read_length>0);
     assert(ref_end_pos>0);
     assert(read_end_pos>0);
@@ -555,7 +556,6 @@ sort_remove_only_indels_last(const starling_align_indel_status& indel_status_map
                              std::vector<indel_key>& indel_order,
                              const unsigned current_depth = 0)
 {
-
     typedef std::vector<indel_key>::const_iterator siter;
     const siter i_begin(indel_order.begin());
     const siter i_new(i_begin+current_depth);
@@ -636,7 +636,6 @@ make_candidate_alignments(const starling_options& client_opt,
                           int max_read_indel_toggle,
                           const candidate_alignment& cal)
 {
-
 #ifdef DEBUG_ALIGN
     std::cerr << "VARMIT starting MCA depth: " << depth << "\n";
     std::cerr << "\twith cal: " << cal;
@@ -992,7 +991,6 @@ get_candidate_indel_count(const starling_options& client_opt,
                           const indel_synchronizer& isync,
                           const candidate_alignment& cal)
 {
-
     indel_set_t is;
     get_alignment_indels(cal,client_opt.max_indel_size,is);
 
@@ -1020,7 +1018,6 @@ is_first_cal_preferred(const starling_options& client_opt,
                        const candidate_alignment& c1,
                        const candidate_alignment& c2)
 {
-
     const extra_path_info epi1(get_extra_path_info(c1.al.path));
     const extra_path_info epi2(get_extra_path_info(c2.al.path));
 
@@ -1077,7 +1074,6 @@ finish_realignment(const starling_options& client_opt,
                    const double /*path_lnp*/,
                    const candidate_alignment* cal_ptr)
 {
-
     if (client_opt.is_clip_ambiguous_path &&
         (cal_pool.size() > 1))
     {
@@ -1325,7 +1321,6 @@ score_candidate_alignments_and_indels(const starling_options& opt,
                                       std::set<candidate_alignment>& cal_set,
                                       const bool is_incomplete_search)
 {
-
     assert(! cal_set.empty());
 
     // (1) score all alignments in cal_set and find the max scoring
@@ -1390,7 +1385,6 @@ void
 load_cal_with_edge_indels(const alignment& al,
                           candidate_alignment& cal)
 {
-
     using namespace ALIGNPATH;
 
     cal.al=al;
@@ -1440,7 +1434,6 @@ get_exemplar_candidate_alignments(const starling_options& opt,
                                   mca_warnings& warn,
                                   std::set<candidate_alignment>& cal_set)
 {
-
     const unsigned read_length(rseg.read_size());
 
     starling_align_indel_status indel_status_map;
@@ -1600,7 +1593,6 @@ realign_and_score_read(const starling_options& opt,
                        read_segment& rseg,
                        indel_synchronizer& isync)
 {
-
     if (! rseg.is_valid())
     {
         log_os << "ERROR: invalid alignment path associated with read segment:\n" << rseg;
@@ -1688,7 +1680,6 @@ realign_and_score_read(const starling_options& opt,
         static const char* osr="alignments crossed chromosome origin";
         static const char* mir="exceeded max number of indel switches";
         const char* reason(warn.origin_skip ? osr : mir );
-
 
         log_os << "WARNING: re-alignment skipped some alternate alignments for read: "  << rseg.key()
                //               << " at buffer_pos: " << (sread.buffer_pos+1) << "\n"
